--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
-    "expres": "^0.0.5",
+    "express": "^4.18.2",
     "nodemon": "^3.0.1"
   }
 }
