--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
