--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pg": "^8.11.1"
   },
   "devDependencies": {
     "express-validator": "^7.0.1"
